Change action name

--- a/action.yml
+++ b/action.yml
@@ -1,5 +1,5 @@
 ---
-name: Expo GitHub Action
+name: Expo GitHub Actions
 author: Expo
 description: Publish, build or manage your Expo app with GitHub Actions
 branding:
